tests/snapshots/snapshot__80x24_with_pairs.snap
---
source: tests/snapshot.rs
assertion_line: 69
expression: "render_pane(&pane, 80, 24)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────┐
│[SRC] Hello, how are you today?                                               │
│[TGT] こ ん に ち は 、 今 日 は お 元 気 で す か ？                                         │
│──────────────────────────────────────────────────────────────────────────────│
│[SRC] I am fine, thank you very much.                                         │
│[TGT] 元 気 で す 、 あ り が と う ご ざ い ま す 。                                         │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
