tests/snapshots/snapshot__80x24_with_partial.snap
---
source: tests/snapshot.rs
expression: "render_pane(&pane, 80, 24)"
---
┌ Subtitles ───────────────────────────────────────────────────────────────────┐
│[SRC] Hello, how are you today?                                               │
│[TGT] Xin chào, bạn có khoẻ không?                                            │
│──────────────────────────────────────────────────────────────────────────────│
│[SRC] I am doing well, thank you.                                             │
│[TGT] Tôi đang ổn, cảm ơn bạn.                                                │
│──────────────────────────────────────────────────────────────────────────────│
│[SRC…] This is an interim partial result                                      │
│[TGT…] Đây là kết quả tạm thời                                                │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
