tests/snapshots/snapshot__auth_banner_narrow_60x10.snap
---
source: tests/snapshot.rs
expression: rendered
---
                                                            
                                                            
                                                            
┌> ⚠ Authentication Error — API calls halted ──────────────┐
│ ⚠  API Key Error                                         │
│                                                          │
│ invalid API key                                          │
│ Fix the key in config.json, then restart the application │
│to recover. Tab changes focus; ↑/↓ scroll.                │
└──────────────────────────────────────────────────────────┘
