tests/snapshots/snapshot__config_apply_restart_required_compact.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ STT: local │ Lang:vi │ TTS:off │ Route:Speakers │ 5 pairs │ Audio:30s │ ~$0.010 │ 0:30 │ ⓘ config: restart required  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
