tests/snapshots/snapshot__config_editor_onboarding_narrow.snap
---
source: tests/snapshot.rs
expression: "render_config_editor(&editor, 60, 16)"
---
┌ First-Run Setup ─────────────────────────────────────────┐
│ Path: C:\Users\demo\.tui-translator\config.json          │
│> Source language : ja-JP_                                │
│  Target language : vi                                    │
│  Google API key  : — (not set)                           │
│  Audio source    : wasapi                                │
│  Capture device  : Windows default playback              │
│  Audio file path : —                                     │
│  STT provider    : local                                 │
│  MT provider     : google                                │
│  TTS enabled     : false                                 │
│  TTS routing     : speakers                              │
│  Virtual mic     : not configured                        │
│  STT fallback    : google-when-keyed                     │
│ Tab/Shift+Tab move  ↓/↑ cycle picker  F2 cycle  Enter    │
└──────────────────────────────────────────────────────────┘
