tests/snapshots/snapshot__config_editor_settings.snap
---
source: tests/snapshot.rs
expression: "render_config_editor(&editor, 90, 20)"
---
       ┌ Settings ────────────────────────────────────────────────────────────────┐
       │ Edit the saved config and press Enter to persist changes.                │
       │ Path: C:\Users\demo\.tui-translator\config.json                          │
       │                                                                          │
       │  Source language : ja-JP                                                 │
       │  Target language : vi                                                    │
       │  Google API key  : — (not set)                                           │
       │> Audio source    : file_                                                 │
       │  Capture device  : Windows default playback                              │
       │  Audio file path : C:\capture\meeting.wav                                │
       │  STT provider    : google                                                │
       │  MT provider     : google                                                │
       │  TTS enabled     : false                                                 │
       │  STT fallback    : none                                                  │
       │  VAD pre-roll ms : 200                                                   │
       │  Max window ms   : 1500                                                  │
       │  Early VAD flush : true                                                  │
       │  Idle flush ms   : 600                                                   │
       │  Idle min ms     : 500                                                   │
       └──────────────────────────────────────────────────────────────────────────┘
