tests/snapshots/snapshot__config_editor_settings_narrow.snap
---
source: tests/snapshot.rs
expression: "render_config_editor(&editor, 60, 16)"
---
┌ Settings ────────────────────────────────────────────────┐
│ Path: C:\Users\demo\.tui-translator\config.json          │
│  Source language : ja-JP                                 │
│> Target language : vi_                                   │
│  Google API key  : — (not set)                           │
│  Audio source    : wasapi                                │
│  Capture device  : Windows default playback              │
│  Audio file path : —                                     │
│  STT provider    : google                                │
│  MT provider     : google                                │
│  TTS enabled     : false                                 │
│  STT fallback    : none                                  │
│  VAD pre-roll ms : 200                                   │
│  Max window ms   : 1500                                  │
│  Early VAD flush : true                                  │
└──────────────────────────────────────────────────────────┘
