tests/snapshots/snapshot__full_ui_long_device_40x10.snap
---
source: tests/snapshot.rs
expression: rendered
---
┌──────────────────────────────────────┐
│TUI Translator   │   ja-JP → vi   │   │
└──────────────────────────────────────┘
┌ Audio — Speakers (Very Long USB-C D… ┐
│                  0%                  │
└──────────────────────────────────────┘
┌──────────────────────────────────────┐
│ I/L Lang:vi 0p                       │
└──────────────────────────────────────┘
 ?  Spc  T  L  S  M  R  Q
